--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
     </nav>
     <!--End of header-->
 
+    <!--slider-->
+    <div class="card-group" id="slider">
+        
+      </div>
+    <!--end of slider-->
+
     <!--footer-->
     <div class="bg-dark bg-gradient text-light p-4">
         <div class="row">
