events page added

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                         <a class="nav-link" href="pages/menu.html">Menu</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="pages/events.html">Events</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="pages/contactus.html">Contact</a>
                     </li>
                 </ul>
@@ -52,19 +55,22 @@
     <!--End of header-->
 
     <!--slider-->
-    <div class="card-group" id="slider">
-        
-      </div>
+    <div class="card-group" id="slider"></div>
     <!--end of slider-->
+
+    <!--startbox-->
+    <h1 class=" text-center fs-1 mt-3">THE CAFE EVENING </h1>
+    <h2 class="font-heading text-center fs-2 text-warning"> [ Slice of Taste ] </h2>
+    <!--end of startbox-->
 
     <!--footer-->
     <div class="bg-dark bg-gradient text-light p-4">
         <div class="row">
-            <div class="col-lg-4 my-auto">
+            <div class="col-lg-3 my-auto">
                 <img class="d-flex flex-column justify-content-evenly footer-logo" src="icon/logo2.jpg" />
                 <p class="mt-2"> </p>
             </div>
-            <div class="col-lg-5 my-auto text-center">
+            <div class="col-lg-6 my-auto text-center">
                 <p class="">Get in Touch with us:</p>
                 <div class="d-flex flex-row justify-content-evenly">
                     <div class="mt-2">
@@ -78,8 +84,9 @@
                             Instagram</a><br />
                     </div>
                     <div class="mt-2">
-                        <a href="https://www.justdial.com/Pune/The-Cafe-Evening-Near-Ivy-Estate-Wagholi/020PXX20-XX20-200108154050-J8H6_BZDET" target="_blank"
-                            class="text-decoration-none text-light"><img class="contact-img" src="icon/justdial.png" />
+                        <a href="https://www.justdial.com/Pune/The-Cafe-Evening-Near-Ivy-Estate-Wagholi/020PXX20-XX20-200108154050-J8H6_BZDET"
+                            target="_blank" class="text-decoration-none text-light"><img class="contact-img"
+                                src="icon/justdial.png" />
                             Justdial</a><br />
                     </div>
                 </div>
@@ -102,9 +109,8 @@
                             Magicpin</a><br />
                     </div>
                 </div>
-
             </div>
-            <div class="col-lg-3 d-flex flex-column my-auto">
+            <div class="col-lg-3 d-flex flex-column my-auto mt-4">
                 <a><i class="fa-solid fa-location-dot" style="color: #ffffff;"></i>
                     Biaf Road, Wagholi, Pune- 412207</a>
                 <br />
