--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -32,6 +32,9 @@
                         <a class="nav-link" href="menu.html">Menu</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="events.html">Events</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="contactus.html">Contact</a>
                     </li>
                 </ul>
@@ -98,7 +101,7 @@
                 </div>
 
             </div>
-            <div class="col-lg-3 d-flex flex-column my-auto">
+            <div class="col-lg-3 d-flex flex-column my-auto mt-4">
                 <a><i class="fa-solid fa-location-dot" style="color: #ffffff;"></i>
                     Biaf Road, Wagholi, Pune- 412207</a>
                 <br />
