--- a/pages/events.html
+++ b/pages/events.html
@@ -32,10 +32,10 @@
                         <a class="nav-link" href="menu.html">Menu</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="events.html">Events</a>
+                        <a class="nav-link active" aria-current="page" href="events.html">Events</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="contactus.html">Contact</a>
+                        <a class="nav-link" href="contactus.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -122,7 +122,7 @@
     </div>
     <!--end of footer-->
 
-    <script src="../js/contactus.js"></script>
+    <script src="../js/events.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
