gallery added and menu page updated

--- a/index.html
+++ b/index.html
@@ -61,7 +61,51 @@
     <!--startbox-->
     <h1 class=" text-center fs-1 mt-3">THE CAFE EVENING </h1>
     <h2 class="font-heading text-center fs-2 text-warning"> [ Slice of Taste ] </h2>
+    <div class="d-flex row m-4 background rounded">
+        <div class="col-lg-4 col-md-12 col-sm-12 d-flex flex-column justify-content-center">
+            <img src="images/outer.PNG" class="img-fluid rounded"/>
+        </div>
+        <div class="col-lg-8 col-md-12 col-sm-12 my-auto">
+            <h2 class="font-heading text-center fs-2 text-dark mt-2"> About Us </h2>
+            <p class="text-center fs-6 m-2">
+                Established in 2018 by Akash Agrawal, Cafe Evening is a cozy retreat nestled in the heart of Biaf Road,
+                Wagholi.
+                We pride ourselves on offering a warm and inviting atmosphere where friends, families, and colleagues
+                can
+                gather
+                to unwind and indulge in delectable treats.
+            </p>
+            <p class="text-center fs-6 m-2">
+                At Cafe Evening, we're passionate about serving quality coffee, mouthwatering snacks, and delightful
+                desserts.
+                Our menu features a diverse selection of beverages, including specialty coffees, teas, refreshing
+                juices,
+                etc. Whether you're craving a cheese burger, a loaded pizza, or a refreshing iced tea, we have
+                something
+                to satisfy every palate.
+            </p>
+            <a href="pages/aboutus.html" class="text-decoration-none"><button type="button" class="btn btn-outline-dark d-block my-2 mx-auto ">Know More About us</button></a>
+        </div>
+        
+    </div>
     <!--end of startbox-->
+
+    <!--gallery-->
+    <h1 class="text-center fs-1 font-heading">Gallery</h1>
+    <div class="gall mx-4">
+        <div>
+            <img src="images/people2.jpg" class="gall-sm" onclick="gall1()"/>
+            <img src="images/people1.jpg" class="gall-sm" onclick="gall2()"/>
+            <img src="images/test1.jpg" class="gall-sm" onclick="gall3()"/>
+        </div>
+        <img src="images/people1.jpg" class="main-img" id="mainimg"/>
+        <div>
+            <img src="images/people4.jpg" class="gall-sm" onclick="gall4()"/>
+            <img src="images/people3.jpg" class="gall-sm" onclick="gall5()"/>
+            <img src="images/test2.jpg" class="gall-sm" onclick="gall6()"/>
+        </div>
+    </div>
+    <!--end of gallery-->
 
     <!--footer-->
     <div class="bg-dark bg-gradient text-light p-4">
