--- a/pages/menu.html
+++ b/pages/menu.html
@@ -54,6 +54,51 @@
     </nav>
     <!--End of header-->
 
+    <!-- Page Header Start -->
+    <div class="headerstart">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="text-light font-heading fs-2">Menu</h2>
+                </div>
+                <div class="col-12">
+                    <a href="../index.html" class="text-light text-decoration-none">Home /</a>
+                    <a href="menu.html" class="text-light text-decoration-none">Menu</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Page Header End -->
+
+    <!--menu-->
+    <div class="card-group">
+        <div class="card m-3 border border-1 border-dark rounded shadow">
+          <img src="../images/pizza.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Pizza <span id="offer" class="badge rounded-pill text-bg-warning">Offer</span></h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+        <div class="card m-3 border border-1 border-dark rounded shadow">
+          <img src="../images/burger.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+        <div class="card m-3 border border-1 border-dark rounded shadow">
+          <img src="../images/fries.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+      </div>
+    <!--end of menu-->
+
     <!--footer-->
     <div class="bg-dark bg-gradient text-light p-4">
         <div class="row">
@@ -66,24 +111,28 @@
                 <div class="d-flex flex-row justify-content-evenly">
                     <div class="mt-2">
                         <a href="https://www.facebook.com/p/The-Cafe-Evening-100064168686089/" target="_blank"
-                            class="text-decoration-none text-light"><img class="contact-img" src="../icon/facebook.png" />
+                            class="text-decoration-none text-light"><img class="contact-img"
+                                src="../icon/facebook.png" />
                             Facebook</a><br />
                     </div>
                     <div class="mt-2">
                         <a href="https://www.instagram.com/thecafeevening/" target="_blank"
-                            class="text-decoration-none text-light"><img class="contact-img" src="../icon/instagram.png" />
+                            class="text-decoration-none text-light"><img class="contact-img"
+                                src="../icon/instagram.png" />
                             Instagram</a><br />
                     </div>
                     <div class="mt-2">
-                        <a href="https://www.justdial.com/Pune/The-Cafe-Evening-Near-Ivy-Estate-Wagholi/020PXX20-XX20-200108154050-J8H6_BZDET" target="_blank"
-                            class="text-decoration-none text-light"><img class="contact-img" src="../icon/justdial.png" />
+                        <a href="https://www.justdial.com/Pune/The-Cafe-Evening-Near-Ivy-Estate-Wagholi/020PXX20-XX20-200108154050-J8H6_BZDET"
+                            target="_blank" class="text-decoration-none text-light"><img class="contact-img"
+                                src="../icon/justdial.png" />
                             Justdial</a><br />
                     </div>
                 </div>
                 <div class="d-flex flex-row justify-content-evenly">
                     <div class="mt-2">
                         <a href="https://www.zomato.com/pune/the-cafe-evening-2-wagholi" target="_blank"
-                            class="text-decoration-none text-light"> <img class="contact-img" src="../icon/zomato.png" />
+                            class="text-decoration-none text-light"> <img class="contact-img"
+                                src="../icon/zomato.png" />
                             Zomato</a><br />
                     </div>
                     <div class="mt-2">
@@ -113,7 +162,8 @@
             </div>
         </div>
         <hr />
-        <p class="text-center">Copyright © 2024 <a href="index.html" class="link-warning text-decoration-none">The Cafe
+        <p class="text-center">Copyright © 2024 <a href="../index.html" class="link-warning text-decoration-none">The
+                Cafe
                 Evening</a></p>
     </div>
     <!--end of footer-->
