order section added

--- a/index.html
+++ b/index.html
@@ -93,19 +93,60 @@
     <!--gallery-->
     <h1 class="text-center fs-1 font-heading">Gallery</h1>
     <div class="gall mx-4">
-        <div>
+        <div class="option">
             <img src="images/people2.jpg" class="gall-sm" onclick="gall1()"/>
             <img src="images/people1.jpg" class="gall-sm" onclick="gall2()"/>
             <img src="images/test1.jpg" class="gall-sm" onclick="gall3()"/>
         </div>
         <img src="images/people1.jpg" class="main-img" id="mainimg"/>
-        <div>
+        <div class="option">
             <img src="images/people4.jpg" class="gall-sm" onclick="gall4()"/>
             <img src="images/people3.jpg" class="gall-sm" onclick="gall5()"/>
             <img src="images/test2.jpg" class="gall-sm" onclick="gall6()"/>
         </div>
     </div>
     <!--end of gallery-->
+
+    <!--order-->
+    <div class="mt-4">
+        <h1 class="text-center font-heading fs-1">Order / Connect</h1>
+        <div class="d-flex flex-row justify-content-evenly">
+            <div class="my-2">
+                <a href="https://www.facebook.com/p/The-Cafe-Evening-100064168686089/" target="_blank"
+                    class="text-decoration-none text-dark"><img class="cont-img" src="icon/facebook.png" />
+                    </a><br />
+            </div>
+            <div class="my-2">
+                <a href="https://www.instagram.com/thecafeevening/" target="_blank"
+                    class="text-decoration-none text-dark"><img class="cont-img" src="icon/instagram.png" />
+                    </a><br />
+            </div>
+            <div class="my-2">
+                <a href="https://www.justdial.com/Pune/The-Cafe-Evening-Near-Ivy-Estate-Wagholi/020PXX20-XX20-200108154050-J8H6_BZDET"
+                    target="_blank" class="text-decoration-none text-dark"><img class="cont-img"
+                        src="icon/justdial.png" />
+                    </a><br />
+            </div>
+            <div class="my-2">
+                <a href="https://www.zomato.com/pune/the-cafe-evening-2-wagholi" target="_blank"
+                    class="text-decoration-none text-dark"> <img class="cont-img" src="icon/zomato.png" />
+                    </a><br />
+            </div>
+            <div class="my-2">
+                <a href="https://www.swiggy.com/restaurants/the-cafe-evening-baif-road-wagholi-pune-168766"
+                    target="_blank" class="text-decoration-none text-dark"><img class="cont-img"
+                        src="icon/swiggy.png" />
+                    </a><br />
+            </div>
+            <div class="my-2">
+                <a href="https://magicpin.in/Pune/Wagholi/Restaurant/The-Cafe-Evening/store/361349/menu/"
+                    target="_blank" class="text-decoration-none text-dark"><img class="cont-img"
+                        src="icon/magicpin.webp" />
+                    </a><br />
+            </div>
+        </div>
+    </div>
+    <!--end of order-->
 
     <!--footer-->
     <div class="bg-dark bg-gradient text-light p-4">
