login form created

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
                     </li>
                 </ul>
             </div>
+            <a href="pages/login.html">
+                <button class="btn" type="button">
+                    <img src="icon/avatar.png" height="50px" />
+                </button>
+            </a>
             <div class="btn-group dropstart bg-light">
                 <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                     <img src="icon/darklightmode.png" height="50px" />
@@ -64,7 +69,7 @@
     <h2 class="font-heading text-center fs-2 text-warning"> [ Slice of Taste ] </h2>
     <div class="d-flex row m-4 background rounded">
         <div class="col-lg-4 col-md-12 col-sm-12 d-flex flex-column justify-content-center">
-            <img src="images/outer.PNG" class="img-fluid rounded"/>
+            <img src="images/outer.PNG" class="img-fluid rounded" />
         </div>
         <div class="col-lg-8 col-md-12 col-sm-12 my-auto">
             <h2 class="font-heading text-center fs-2 text-dark mt-2"> About Us </h2>
@@ -85,9 +90,10 @@
                 something
                 to satisfy every palate.
             </p>
-            <a href="pages/aboutus.html" class="text-decoration-none"><button type="button" class="btn btn-outline-dark d-block my-2 mx-auto ">Know More About us</button></a>
+            <a href="pages/aboutus.html" class="text-decoration-none"><button type="button"
+                    class="btn btn-outline-dark d-block my-2 mx-auto ">Know More About us</button></a>
         </div>
-        
+
     </div>
     <!--end of startbox-->
 
@@ -95,15 +101,15 @@
     <h1 class="text-center fs-1 font-heading">Gallery</h1>
     <div class="gall mx-4">
         <div class="option">
-            <img src="images/people2.jpg" class="gall-sm" onclick="gall1()"/>
-            <img src="images/people1.jpg" class="gall-sm" onclick="gall2()"/>
-            <img src="images/test1.jpg" class="gall-sm" onclick="gall3()"/>
+            <img src="images/people2.jpg" class="gall-sm" onclick="gall1()" />
+            <img src="images/people1.jpg" class="gall-sm" onclick="gall2()" />
+            <img src="images/test1.jpg" class="gall-sm" onclick="gall3()" />
         </div>
-        <img src="images/people1.jpg" class="main-img" id="mainimg"/>
+        <img src="images/people1.jpg" class="main-img" id="mainimg" />
         <div class="option">
-            <img src="images/people4.jpg" class="gall-sm" onclick="gall4()"/>
-            <img src="images/people3.jpg" class="gall-sm" onclick="gall5()"/>
-            <img src="images/test2.jpg" class="gall-sm" onclick="gall6()"/>
+            <img src="images/people4.jpg" class="gall-sm" onclick="gall4()" />
+            <img src="images/people3.jpg" class="gall-sm" onclick="gall5()" />
+            <img src="images/test2.jpg" class="gall-sm" onclick="gall6()" />
         </div>
     </div>
     <!--end of gallery-->
@@ -115,35 +121,35 @@
             <div class="my-2">
                 <a href="https://www.facebook.com/p/The-Cafe-Evening-100064168686089/" target="_blank"
                     class="text-decoration-none text-dark"><img class="cont-img" src="icon/facebook.png" />
-                    </a><br />
+                </a><br />
             </div>
             <div class="my-2">
                 <a href="https://www.instagram.com/thecafeevening/" target="_blank"
                     class="text-decoration-none text-dark"><img class="cont-img" src="icon/instagram.png" />
-                    </a><br />
+                </a><br />
             </div>
             <div class="my-2">
                 <a href="https://www.justdial.com/Pune/The-Cafe-Evening-Near-Ivy-Estate-Wagholi/020PXX20-XX20-200108154050-J8H6_BZDET"
                     target="_blank" class="text-decoration-none text-dark"><img class="cont-img"
                         src="icon/justdial.png" />
-                    </a><br />
+                </a><br />
             </div>
             <div class="my-2">
                 <a href="https://www.zomato.com/pune/the-cafe-evening-2-wagholi" target="_blank"
                     class="text-decoration-none text-dark"> <img class="cont-img" src="icon/zomato.png" />
-                    </a><br />
+                </a><br />
             </div>
             <div class="my-2">
                 <a href="https://www.swiggy.com/restaurants/the-cafe-evening-baif-road-wagholi-pune-168766"
                     target="_blank" class="text-decoration-none text-dark"><img class="cont-img"
                         src="icon/swiggy.png" />
-                    </a><br />
+                </a><br />
             </div>
             <div class="my-2">
                 <a href="https://magicpin.in/Pune/Wagholi/Restaurant/The-Cafe-Evening/store/361349/menu/"
                     target="_blank" class="text-decoration-none text-dark"><img class="cont-img"
                         src="icon/magicpin.webp" />
-                    </a><br />
+                </a><br />
             </div>
         </div>
     </div>
