--- a/pages/events.html
+++ b/pages/events.html
@@ -55,7 +55,7 @@
     <!--End of header-->
 
     <!--form-->
-    
+    <h1 class="text-center m-5 fs-1">Will complete later</h1>
     <!--end of form-->
 
     <!--footer-->
