--- a/pages/login.html
+++ b/pages/login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>THE CAFE EVENING</title>
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/login.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -29,7 +30,7 @@
                         <a class="nav-link" href="aboutus.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="menu.html">Menu</a>
+                        <a class="nav-link" href="menu.html">Menu</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="events.html">Events</a>
@@ -54,66 +55,23 @@
     </nav>
     <!--End of header-->
 
-    <!-- Page Header Start -->
-    <div class="headerstart">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <h2 class="text-light font-heading fs-2">Menu</h2>
-                </div>
-                <div class="col-12">
-                    <a href="../index.html" class="text-light text-decoration-none">Home /</a>
-                    <a href="menu.html" class="text-light text-decoration-none">Menu</a>
-                </div>
+    <!--login form-->
+    <div class="card login d-block mx-auto my-5 shadow">
+        <h1 class="card-heading text-center">Login Form</h1>
+        <div class="card-body">
+            <div class="form-floating mb-3">
+                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" required>
+                <label for="floatingInput">Email address</label>
+            </div>
+            <div class="form-floating">
+                <input type="password" class="form-control" id="floatingPassword" placeholder="Password" required>
+                <label for="floatingPassword">Password</label>
             </div>
         </div>
+        <button type="button" class="btn btn-outline-dark d-block mx-auto" onclick="submit()">Submit</button><br/> 
+        <div class="link lato-bold-italic text-center">Not a member? <a class="for" href="./register.html">Sign up</a></div>
     </div>
-    <!-- Page Header End -->
-
-    <!--menu-->
-    <div class="card-group">
-        <div class="card m-3 border border-1 border-dark rounded shadow-lg">
-            <img src="../images/pizza.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title font-heading fs-4">Pizza <span id="offer"
-                        class="badge rounded-pill text-bg-warning">Offer</span></h5>
-                <p class="card-text fs-6">Indulge in our scrumptious pizzas at Cafe Evening, crafted with the finest
-                    ingredients and baked to perfection. From classic Margheritas to gourmet specialties, each slice is
-                    a burst of flavor that will leave you craving for more. Join us for a slice of happiness
-                    at Cafe Evening today!
-                </p>
-                <p class="card-text fs-5 text-center">Price: <del class="text-danger">₹450/-</del> ₹250/-</p>
-                <a href="pizza.html" class="text-decoration-none"><button type="button"
-                        class="btn btn-outline-dark d-block mx-auto">Order Now</button></a>
-            </div>
-        </div>
-        <div class="card m-3 border border-1 border-dark rounded shadow-lg">
-            <img src="../images/burger.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title text-center font-heading fs-4">Burger</h5>
-                <p class="card-text fs-6">Savor the juiciness of our gourmet burgers at Cafe Evening, where every bite
-                    is a symphony of flavors. Handcrafted with premium ingredients and grilled to perfection, our
-                    burgers are a delight for your palate. Sink your teeth into pure deliciousness at
-                    Cafe Evening!
-                </p>
-                <p class="card-text fs-5 text-center">Price: ₹350/-</p>
-                <button type="button" class="btn btn-outline-dark d-block mx-auto">Order Now</button>
-            </div>
-        </div>
-        <div class="card m-3 border border-1 border-dark rounded shadow-lg">
-            <img src="../images/fries.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title text-center font-heading fs-4">French Fries</h5>
-                <p class="card-text fs-6">
-                    Treat yourself to our irresistible fries at Cafe Evening, crispy on the outside and fluffy on the
-                    inside. Perfectly seasoned and served piping hot, they're the ultimate comfort food companion to any
-                    meal. Get ready to dip, munch, and enjoy every golden bite at Cafe Evening!</p>
-                <p class="card-text fs-5 text-center">Price: ₹ 150/-</p>
-                <button type="button" class="btn btn-outline-dark d-block mx-auto">Order Now</button>
-            </div>
-        </div>
-    </div>
-    <!--end of menu-->
+    <!--end of login-->
 
     <!--footer-->
     <div class="bg-dark bg-gradient text-light p-4">
@@ -178,13 +136,12 @@
             </div>
         </div>
         <hr />
-        <p class="text-center">Copyright © 2024 <a href="../index.html" class="link-warning text-decoration-none">The
-                Cafe
+        <p class="text-center">Copyright © 2024 <a href="index.html" class="link-warning text-decoration-none">The Cafe
                 Evening</a></p>
     </div>
     <!--end of footer-->
 
-    <script src="../js/menu.js"></script>
+    <script src="../js/login.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
