--- a/pages/login.html
+++ b/pages/login.html
@@ -40,6 +40,11 @@
                     </li>
                 </ul>
             </div>
+            <a href="login.html">
+                <button class="btn" type="button">
+                    <img src="../icon/avatar.png" height="50px" />
+                </button>
+            </a>
             <div class="btn-group dropstart bg-light">
                 <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                     <img src="../icon/darklightmode.png" height="50px" />
@@ -56,20 +61,22 @@
     <!--End of header-->
 
     <!--login form-->
-    <div class="card login d-block mx-auto my-5 shadow">
-        <h1 class="card-heading text-center">Login Form</h1>
-        <div class="card-body">
-            <div class="form-floating mb-3">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" required>
-                <label for="floatingInput">Email address</label>
-            </div>
-            <div class="form-floating">
-                <input type="password" class="form-control" id="floatingPassword" placeholder="Password" required>
-                <label for="floatingPassword">Password</label>
+    <div class="container">
+        <div class="card login mx-auto my-5 shadow">
+            <h1 class="card-heading text-center">Login Form</h1>
+            <div class="card-body">
+                <div class="form-group">
+                    <input type="email" class="form-control" id="email" placeholder="Enter email" required>
+                </div><br/>
+                <div class="form-group">
+                    <input type="password" class="form-control" id="password" placeholder="Enter password" required>
+                </div><br/>
+                <button type="button" class="btn btn-dark btn-block d-block mx-auto" onclick="validateLogin()">Log in</button>
+                <div class="text-center mt-3">
+                    Not a member? <a href="./register.html">Sign Up</a>
+                </div>
             </div>
         </div>
-        <button type="button" class="btn btn-outline-dark d-block mx-auto" onclick="submit()">Submit</button><br/> 
-        <div class="link lato-bold-italic text-center">Not a member? <a class="for" href="./register.html">Sign up</a></div>
     </div>
     <!--end of login-->
 
