--- a/pages/menu.html
+++ b/pages/menu.html
@@ -39,6 +39,11 @@
                     </li>
                 </ul>
             </div>
+            <a href="login.html">
+                <button class="btn" type="button">
+                    <img src="../icon/avatar.png" height="50px" />
+                </button>
+            </a>
             <div class="btn-group dropstart bg-light">
                 <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                     <img src="../icon/darklightmode.png" height="50px" />
