--- a/pages/register.html
+++ b/pages/register.html
@@ -40,6 +40,11 @@
                     </li>
                 </ul>
             </div>
+            <a href="login.html">
+                <button class="btn" type="button">
+                    <img src="../icon/avatar.png" height="50px" />
+                </button>
+            </a>
             <div class="btn-group dropstart bg-light">
                 <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                     <img src="../icon/darklightmode.png" height="50px" />
@@ -55,9 +60,28 @@
     </nav>
     <!--End of header-->
 
-    <!--login form-->
-    
-    <!--end of login-->
+    <!--register form-->
+    <div class="container">
+        <div class="card login mx-auto my-5 shadow">
+            <h1 class="card-heading text-center">Registration Form</h1>
+            <div class="card-body">
+                <div class="form-group">
+                    <input type="text" class="form-control" id="fullName" placeholder="Enter full name" required>
+                </div><br/>
+                <div class="form-group">
+                    <input type="email" class="form-control" id="email" placeholder="Enter email" required>
+                </div><br/>
+                <div class="form-group">
+                    <input type="password" class="form-control" id="password" placeholder="Enter password" required>
+                </div><br/>
+                <button type="button" class="btn btn-dark btn-block d-block mx-auto" onclick="validateRegistration()">Register</button>
+                <div class="text-center mt-3">
+                    Already a member? <a href="./login.html">Log In</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--end of register-->
 
     <!--footer-->
     <div class="bg-dark bg-gradient text-light p-4">
@@ -127,7 +151,7 @@
     </div>
     <!--end of footer-->
 
-    <script src="../js/login.js"></script>
+    <script src="../js/register.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
