home page completed

--- a/index.html
+++ b/index.html
@@ -64,15 +64,29 @@
     <div class="card-group" id="slider"></div>
     <!--end of slider-->
 
-    <!--startbox-->
     <h1 class=" text-center fs-1 mt-3">THE CAFE EVENING </h1>
     <h2 class="font-heading text-center fs-2 text-warning"> [ Slice of Taste ] </h2>
+
+    <!--menu-->
+    <div class="container">
+        <h1 class="text-center mt-5">Cafe Evening Menu</h1>
+        <div id="menu" class="row mt-4"></div>
+    </div>
+
+    <a href="pages/menu.html" class="text-decoration-none"><button type="button"
+            class="btn btn-outline-dark btn-lg d-block mx-auto">View more Items</button></a>
+            <br/>
+    <!--end of menu-->
+
+    <!--startbox-->
+
+    <h2 class="font-heading text-center fs-2 text-dark mt-2"> About Us </h2>
     <div class="d-flex row m-4 background rounded">
         <div class="col-lg-4 col-md-12 col-sm-12 d-flex flex-column justify-content-center">
-            <img src="images/outer.PNG" class="img-fluid rounded" id="image-abt" onclick="change1()" ondblclick="change2()"/>
+            <img src="images/outer.PNG" class="img-fluid rounded m-3" id="image-abt" onclick="change1()"
+                ondblclick="change2()" />
         </div>
         <div class="col-lg-8 col-md-12 col-sm-12 my-auto">
-            <h2 class="font-heading text-center fs-2 text-dark mt-2"> About Us </h2>
             <p class="text-center fs-6 m-2">
                 Established in 2018 by Akash Agrawal, Cafe Evening is a cozy retreat nestled in the heart of Biaf Road,
                 Wagholi.
@@ -91,7 +105,7 @@
                 to satisfy every palate.
             </p>
             <a href="pages/aboutus.html" class="text-decoration-none"><button type="button"
-                    class="btn btn-outline-dark d-block my-2 mx-auto " >Know More About us</button></a>
+                    class="btn btn-outline-dark d-block my-2 mx-auto ">Know More About us</button></a>
         </div>
 
     </div>
