--- a/pages/menu.html
+++ b/pages/menu.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>THE CAFE EVENING</title>
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/menu.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -76,47 +77,9 @@
     <!-- Page Header End -->
 
     <!--menu-->
-    <div class="card-group">
-        <div class="card m-3 border border-1 border-dark rounded shadow-lg">
-            <img src="../images/pizza.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title font-heading fs-4">Pizza <span id="offer"
-                        class="badge rounded-pill text-bg-warning">Offer</span></h5>
-                <p class="card-text fs-6">Indulge in our scrumptious pizzas at Cafe Evening, crafted with the finest
-                    ingredients and baked to perfection. From classic Margheritas to gourmet specialties, each slice is
-                    a burst of flavor that will leave you craving for more. Join us for a slice of happiness
-                    at Cafe Evening today!
-                </p>
-                <p class="card-text fs-5 text-center">Price: <del class="text-danger">₹450/-</del> ₹250/-</p>
-                <a href="pizza.html" class="text-decoration-none"><button type="button"
-                        class="btn btn-outline-dark d-block mx-auto">Order Now</button></a>
-            </div>
-        </div>
-        <div class="card m-3 border border-1 border-dark rounded shadow-lg">
-            <img src="../images/burger.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title text-center font-heading fs-4">Burger</h5>
-                <p class="card-text fs-6">Savor the juiciness of our gourmet burgers at Cafe Evening, where every bite
-                    is a symphony of flavors. Handcrafted with premium ingredients and grilled to perfection, our
-                    burgers are a delight for your palate. Sink your teeth into pure deliciousness at
-                    Cafe Evening!
-                </p>
-                <p class="card-text fs-5 text-center">Price: ₹350/-</p>
-                <button type="button" class="btn btn-outline-dark d-block mx-auto">Order Now</button>
-            </div>
-        </div>
-        <div class="card m-3 border border-1 border-dark rounded shadow-lg">
-            <img src="../images/fries.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title text-center font-heading fs-4">French Fries</h5>
-                <p class="card-text fs-6">
-                    Treat yourself to our irresistible fries at Cafe Evening, crispy on the outside and fluffy on the
-                    inside. Perfectly seasoned and served piping hot, they're the ultimate comfort food companion to any
-                    meal. Get ready to dip, munch, and enjoy every golden bite at Cafe Evening!</p>
-                <p class="card-text fs-5 text-center">Price: ₹ 150/-</p>
-                <button type="button" class="btn btn-outline-dark d-block mx-auto">Order Now</button>
-            </div>
-        </div>
+    <div class="container">
+        <h1 class="text-center mt-5">Cafe Evening Menu</h1>
+        <div id="menu" class="mt-4"></div>
     </div>
     <!--end of menu-->
 
