--- a/pages/burger.html
+++ b/pages/burger.html
@@ -66,7 +66,7 @@
                 <div class="col-12">
                     <a href="../index.html" class="text-light text-decoration-none">Home /</a>
                     <a href="menu.html" class="text-light text-decoration-none">Menu /</a>
-                    <a href="pizza.html" class="text-light text-decoration-none">Pizza</a>
+                    <a href="burger.html" class="text-light text-decoration-none">Burger</a>
                 </div>
             </div>
         </div>
@@ -75,42 +75,35 @@
 
     <!--order-->
     <div class="container1 container border border-dark my-3 mx-auto">
-        <h1 class="text-center fs-1 font-heading">Pizza <span id="offer" class="badge text-bg-warning rounded-pill"> Offer</span></h1>
+        <h1 class="text-center fs-1 font-heading">Burger</h1>
         <!--pizza container-->
 
         <div class="starter p-2 mx-5">
             <div>
-                <img src="../images/pizzaVariety.jpg" class="mx-2 subimg2" />
+                <img src="../images/burger.jpg" class="mx-2 subimg" />
             </div>
             <div>
-                <video height="480px" controls autoplay muted>
-                    <source src="../video/Pizza.mp4" type="video/mp4" />
+                <video controls autoplay muted class="subimg">
+                    <source src="../video/burgerShort.mp4" type="video/mp4" />
                 </video>
             </div>
-            <div class="sub">
-                <div>
-                    <img src="../images/pizza3.jpg" class="mx-2 subimg" />
-                </div>
-                <div>
-                    <img src="../images/pizza1.jpg" class="mx-2 subimg" />
-                </div>
-            </div>
+            
         </div>
         <!--end of pizza container-->
-        <p>Indulge in our mouthwatering pizza made with fresh ingredients and topped with your favorite flavors.</p>
-        <p>Cost per Pizza: ₹250/-</p>
+        <p>Savor the juiciest burgers in town at Cafe Evening – where every bite is a flavor explosion!</p>
+        <p>Cost per Burger: ₹350/-</p>
         <div class="d-flex flex-row justify-content-center">
             <div class="col-auto me-2">
-                <input type="number" id="quantity" class="form-control" aria-describedby="passwordHelpInline"
+                <input type="number" id="quantity1" class="form-control" aria-describedby="passwordHelpInline"
                     min="1" placeholder="Enter the quantity">
             </div>
             <div class="col-auto">
                 <label for="inputPassword6" class="col-form-label">
-                    <p> Total Cost: <span id="total"><del>₹550/-</del> ₹250/-</span></p>
+                    <p> Total Cost: <span id="total1">₹350</span></p>
                 </label>
             </div>
         </div>
-        <button class="btn btn-dark btn-lg" onclick="calculateTotal()">Calculate Bill</button>
+        <button class="btn btn-dark btn-lg" onclick="calculateTotal1()">Calculate Bill</button>
     </div>
     <!--end of order-->
 
