rolls page created

--- a/pages/roll.html
+++ b/pages/roll.html
@@ -66,7 +66,7 @@
                 <div class="col-12">
                     <a href="../index.html" class="text-light text-decoration-none">Home /</a>
                     <a href="menu.html" class="text-light text-decoration-none">Menu /</a>
-                    <a href="fries.html" class="text-light text-decoration-none">Fries</a>
+                    <a href="roll.html" class="text-light text-decoration-none">Rolls</a>
                 </div>
             </div>
         </div>
@@ -75,38 +75,38 @@
 
     <!--order-->
     <div class="container1 container border border-dark my-3 mx-auto">
-        <h1 class="text-center fs-1 font-heading">Fries </h1>
+        <h1 class="text-center fs-1 font-heading">Rolls</h1>
         <!--pizza container-->
 
         <div class="starter p-2 mx-5">
             <div>
-                <img src="../images/fries1.jpg" class="mx-2 subimg2" />
+                <img src="../images/roll4.jpg" class="mx-2 subimg2" />
             </div>
             <div>
                 <video height="480px" controls autoplay muted>
-                    <source src="../video/cheesyFries.mp4" type="video/mp4" />
+                    <source src="../video/rollTadka.mp4" type="video/mp4" />
                 </video>
             </div>
             <div>
-                <img src="../images/fries2.jpg" class="mx-2 subimg2" />
+                <img src="../images/roll1.jpg" class="mx-2 subimg2" />
             </div>
             
         </div>
         <!--end of pizza container-->
-        <p>Craving a crispy delight? Dive into our golden fries at Café Evening – the perfect side to elevate your meal experience!</p>
-        <p>Cost per fries: ₹150/-</p>
+        <p>Delight in savory rolls at Café Evening – where each bite is a flavorful journey!</p>
+        <p>Cost per roll: ₹120/-</p>
         <div class="d-flex cost justify-content-center">
             <div class="col-auto me-2">
-                <input type="number" id="quantity2" class="form-control" aria-describedby="passwordHelpInline"
+                <input type="number" id="quantity3" class="form-control" aria-describedby="passwordHelpInline"
                     min="1" placeholder="Enter the quantity">
             </div>
             <div class="col-auto">
                 <label for="inputPassword6" class="col-form-label">
-                    <p> Total Cost: <span id="total2"> ₹150/-</span></p>
+                    <p> Total Cost: <span id="total3"> ₹120/-</span></p>
                 </label>
             </div>
         </div>
-        <button class="btn btn-dark btn-lg" onclick="calculateTotal2()">Calculate Bill</button>
+        <button class="btn btn-dark btn-lg" onclick="calculateTotal3()">Calculate Bill</button>
     </div>
     <!--end of order-->
 
